Registro de direcciones y métodos de pago
Agregué la validación para que ningún usuario pueda comprar si no tienen direcciones y métodos de pago. También vi que el email en el navbar estaba algo caído, entonces lo volví a subir

--- a/client/app/src/app/core/header/header.component.css
+++ b/client/app/src/app/core/header/header.component.css
@@ -115,3 +115,8 @@ c-navbar-nav[_ngcontent-ng-c2598991299] {
 .mat-mdc-icon-button.mat-mdc-button-base {
   padding: 8px;
 }
+.btnEmail {
+  height: 70%;
+  background-color: transparent;
+  border: transparent;
+}
