--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -90,7 +90,7 @@
         </c-nav-item>
 
         <c-dropdown variant="nav-item" [popper]="false">
-          <button cDropdownToggle cNavLink class="dropdown">
+          <button cDropdownToggle cNavLink class="dropdown btnEmail">
             <c-navbar-text *ngIf="isAutenticated"
               >{{ currentUser.user.Email }}
             </c-navbar-text>
