--- a/client/app/src/app/user/user-create-direccion/user-create-direccion.component.css
+++ b/client/app/src/app/user/user-create-direccion/user-create-direccion.component.css
@@ -1,79 +1,84 @@
 mat-form-field.mat-form-field {
-    font-size: 16px;
-  }
-  .full-width {
-    width: 100%;
-  }
-  .row {
-    display: flex;
-    flex-direction: row;
-    --cui-gutter-x: -0.5rem;
-  }
-  .col {
-    flex: 1;
-    margin-right: 20px;
-  }
-  body {
-    background-color: #c6ac8f !important;
-    margin-bottom: 5rem;
-  }
-  
-  .dialog-content {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-  }
-  .dialog-left {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    margin: 1% 0;
-  
-  }
+  font-size: 16px;
+}
+.full-width {
+  width: 100%;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  --cui-gutter-x: -0.5rem;
+}
+.col {
+  flex: 1;
+  margin-right: 20px;
+}
+body {
+  background-color: #c6ac8f !important;
+  margin-bottom: 5rem;
+}
 
+.dialog-content {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.dialog-left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 1% 0;
+}
+
+.dialog-forms {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 1% 0;
+}
+.row-container-pcd {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Tres columnas de ancho igual */
+  grid-gap: 0px; /* Espacio entre elementos */
+}
+
+.flex-item {
+  width: 100%; /*Asegura que cada elemento ocupe todo el ancho disponible*/
+}
+
+.borde {
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  margin: 1%;
+  padding: 1%;
+}
+.divTitular {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0%;
+}
+@media (max-width: 768px) {
+  .dialog-content {
+    flex-direction: column; /* Cambiar a columna en pantallas más pequeñas */
+  }
+  .dialog-left,
   .dialog-right {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    margin: 1% 0;
+    flex: initial; /* Volver a la configuración predeterminada para que puedan ajustarse */
   }
   .row-container-pcd {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Tres columnas de ancho igual */
+    grid-template-columns: repeat(1, 1fr); /* Tres columnas de ancho igual */
     grid-gap: 0px; /* Espacio entre elementos */
   }
-  
-  .flex-item {
-    width: 100%; /*Asegura que cada elemento ocupe todo el ancho disponible*/
-  }
-  
-  .borde {
-    background-color: #f2f2f2;
-    border-radius: 10px;
-    margin: 1%;
-    padding: 1%;
-  }
-  .divTitular{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0%;
-  }
-  @media (max-width: 768px) {
-    .dialog-content {
-      flex-direction: column; /* Cambiar a columna en pantallas más pequeñas */
-    }
-    .dialog-left,
-    .dialog-right {
-      flex: initial; /* Volver a la configuración predeterminada para que puedan ajustarse */
-    }
-    .row-container-pcd {
-      display: grid;
-      grid-template-columns: repeat(1, 1fr); /* Tres columnas de ancho igual */
-      grid-gap: 0px; /* Espacio entre elementos */
-    }
-  }
-  
+}
 
-  form{
-    margin-bottom:10px;
-  }
+form {
+  margin-bottom: 10px;
+}
+.btnSiguiente{
+
+  display: flex; 
+  justify-content: flex-end; 
+  margin-top: 1rem;
+  margin-right: 5%;
+}
