--- a/client/app/src/app/producto/producto-detail/producto-detail.component.html
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.html
@@ -38,9 +38,7 @@
           <p>
             {{
               "Proveedor: " +
-                datos.vendedor.Nombre +
-                " " +
-                datos.vendedor.Apellido
+                datos.vendedor.NombreVendedor
             }}
           </p>
           <p>{{ "Disponibles: " + datos.Cantidad }}</p>
