evaluacion cliente -> vendedor
está sin la calificación promedio del vendedor por el momento

--- a/client/app/src/app/evaluacion/evaluacion-create/evaluacion-create.component.html
+++ b/client/app/src/app/evaluacion/evaluacion-create/evaluacion-create.component.html
@@ -1,37 +1,46 @@
-<div style="margin: 5%; text-align: center;">
-
+<div style="margin: 5%; text-align: center">
     <h2>Evalúe a sus proveedores</h2>
-    <p>Para ofrecerle una mejor experiencia y productos, por favor evalúe a sus proveedores</p>
-    <!-- <button (click)="close()">Más tarde</button> -->
-    <div>
-
-        <div style="margin-top: 2%;">
-            <div>
-                <h3>Jake Doe</h3>
-            </div>
-            
-            <div>
-                <span>4.6</span>
-                <span>puntuación promedio</span>
-            </div>
-            
-        </div>
+    <p>
+      Para ofrecerle una mejor experiencia y productos, por favor evalúe a sus
+      proveedores
+    </p>
+  
+    <div id="rating" *ngFor="let vendorInfo of uniqueVendorInfo">
+      <div style="margin-top: 2%">
         <div>
-            <!-- <mat-icon>star_border</mat-icon>
-            <mat-icon>star_border</mat-icon>
-            <mat-icon>star_border</mat-icon>
-            <mat-icon>star_border</mat-icon>
-            <mat-icon>star_border</mat-icon> -->
-
-            <mat-icon (mouseenter)="changeIcon(1)" (click)="keepIcon(1)">{{ stars[0] }}</mat-icon>
-            <mat-icon (mouseenter)="changeIcon(2)" (click)="keepIcon(2)">{{ stars[1] }}</mat-icon>
-            <mat-icon (mouseenter)="changeIcon(3)" (click)="keepIcon(3)">{{ stars[2] }}</mat-icon>
-            <mat-icon (mouseenter)="changeIcon(4)" (click)="keepIcon(4)">{{ stars[3] }}</mat-icon>
-            <mat-icon (mouseenter)="changeIcon(5)" (click)="keepIcon(5)">{{ stars[4] }}</mat-icon>
-
+          <h3 id="nombreVendedor">{{ vendorInfo.name }}</h3>
         </div>
-
+  
+        <div>
+          <span id="puntPromedio"></span>
+          <span> puntuación promedio</span>
+        </div>
+      </div>
+      <div>
+        <mat-icon
+          
+          (click)="keepIcon(vendorInfo, 1)"
+        >{{ vendorInfo.starStates[0] ? 'star_rate' : 'star_border' }}</mat-icon>
+        <mat-icon
+          
+          (click)="keepIcon(vendorInfo, 2)"
+        >{{ vendorInfo.starStates[1] ? 'star_rate' : 'star_border' }}</mat-icon>
+        <mat-icon
+          
+          (click)="keepIcon(vendorInfo, 3)"
+        >{{ vendorInfo.starStates[2] ? 'star_rate' : 'star_border' }}</mat-icon>
+        <mat-icon
+          
+          (click)="keepIcon(vendorInfo, 4)"
+        >{{ vendorInfo.starStates[3] ? 'star_rate' : 'star_border' }}</mat-icon>
+        <mat-icon
+          
+          (click)="keepIcon(vendorInfo, 5)"
+        >{{ vendorInfo.starStates[4] ? 'star_rate' : 'star_border' }}</mat-icon>
+      </div>
+  
     </div>
-
-
-</div>
+    <button  style="margin-top: 5%; " (click)="guardarEvaluacion()">Enviar</button>
+  </div>
+  
+  
