se me olvidó decir antes: HAY QUE RESETEAR EL PRISMA
tuve que agregar un campo "Comentario" en la tabla Evaluacion

--- a/client/app/src/app/evaluacion/evaluacion-create-vendedor/evaluacion-create-vendedor.component.html
+++ b/client/app/src/app/evaluacion/evaluacion-create-vendedor/evaluacion-create-vendedor.component.html
@@ -44,7 +44,7 @@
         </form>
       </div>
     </div>
-    <button mat-raised-button color="primary" style="margin-top: 5%; " (click)="guardarEvaluacion()">Enviar</button>
+    <button mat-raised-button class="btnDetalle" color="primary"  (click)="guardarEvaluacion()">Enviar</button>
   </div>
   
   
