--- a/client/app/src/app/evaluacion/evaluacion-create-cliente/evaluacion-create-cliente.component.html
+++ b/client/app/src/app/evaluacion/evaluacion-create-cliente/evaluacion-create-cliente.component.html
@@ -1,17 +1,17 @@
 <div style="margin: 5%; text-align: center">
-  <h2 >Evalúe a su proveedor</h2>
+  <h2 >Evalúe a su cliente</h2>
   <p>
-    Por favor califique a su proveedor y ofrezca un comentario
+    Por favor califique a su cliente y ofrezca un comentario
   </p>
 
   <div id="rating" >
     <div style="margin-top: 2%">
       <div>
-        <h3  id="nombreVendedor">{{vendedor.NombreVendedor}}</h3>
+        <h3  id="nombre">{{cliente.Nombre + " " + cliente.Apellido}}</h3>
       </div>
 
       <div>
-        <span id="puntPromedio">{{vendedor.Calificacion}}</span>
+        <span id="puntPromedio">{{cliente.Calificacion}}</span>
         <span> puntuación promedio</span>
       </div>
     </div>
@@ -29,7 +29,7 @@
     </div>
 
     <div>
-      <form [formGroup]="comentarioForm" (ngSubmit)="crearPregunta()">
+      <form [formGroup]="comentarioForm" (ngSubmit)="crearComentario()">
         <h4>¿Algún comentario?</h4>
         <input type="hidden" formControlName="idOrden" />
         <input type="hidden" formControlName="clienteId" />
@@ -41,19 +41,8 @@
           <mat-hint align="end"> / 500</mat-hint>
 
         </mat-form-field>
-<!--         <mat-card-actions>
-          <button
-            mat-raised-button
-            class="btnGuardar"
-            color="primary"
-            type="submit"
-          >
-            Guardar
-          </button>
-        </mat-card-actions> -->
       </form>
     </div>
   </div>
   <button mat-raised-button class="btnDetalle" color="primary" style="margin-top: 5%; " (click)="guardarEvaluacion()">Enviar</button>
 </div>
-
