--- a/client/app/src/app/admin/dashboard/dashboard.component.css
+++ b/client/app/src/app/admin/dashboard/dashboard.component.css
@@ -5,6 +5,15 @@
 .dashboard {
   width: 30%;
   margin: 1rem;
+  height: 100%;
+}
+
+h5{
+  color: black;
+}
+
+table{
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .shipping-card {
@@ -14,13 +23,14 @@
 
 .container{
     width: 100%;
-    overflow: hidden;
+    align-content: center;
+    display: flex;
+    height: 25rem;
 }
 
 .column{
-    margin: 1rem;
-    width: 40%;
-    float: left;
+    margin: 2%;
+    width: 45%;
     box-sizing: border-box;
 }
 
@@ -29,16 +39,8 @@
   width: 20rem;
   height: 20rem;
   margin: 1rem auto;
-  background-color: red;
 }
 
-.list {
-  display: block;
-  width: 20rem;
-  height: 20rem;
-  margin: 1rem auto;
-  background-color: blue;
-}
 
 .fotoProducto {
     margin-top: 5%;
