--- a/client/app/src/app/admin/dashboard/dashboard.component.html
+++ b/client/app/src/app/admin/dashboard/dashboard.component.html
@@ -1,70 +1,120 @@
 <mat-card class="shipping-card">
   <mat-card-content>
     <h3 align="center">Dashboard</h3>
-    <h4>Ventas realizadas el día de hoy: {{ VentasHoy }}</h4>
-      <div class="container">
-        <div class="column">
-          <div class="w-100">
-            <!-- Productos más vendidos-->
-            <h5>Productos más vendidos del mes:</h5>
-            <mat-card-content>
-                <table
-                mat-table
-                [dataSource]="MasVendidos"
-                class="full-width-table"
-                
-                aria-label="Elements"
-              >
-              <ng-container matColumnDef="foto">
-                <th mat-header-cell *matHeaderCellDef >Foto</th>
-                <td mat-cell *matCellDef="let row"><img
-                    *ngIf="row.FotoProducto[0] !== undefined"
-                    mat-card-image
-                    class="fotoProducto"
-                    [src]="'data:image/jpeg;base64,' + row.FotoProducto"
-                    alt="Foto de + {{ row.Nombre }}"
-                  /></td>
-              </ng-container>
+    <h4 align="center">Ventas realizadas el día de hoy: 💲🤑💲{{ VentasHoy }}💲🤑💲</h4>
+    <div class="container">
+      <div class="column" style="background-color: rgb(131, 181, 228)">
+        <div class="w-100">
+          <!-- Productos más vendidos-->
+          <h5 align="center">Productos más vendidos del mes:</h5>
+          <table
+            mat-table
+            [dataSource]="MasVendidos"
+            class="full-width-table"
+            aria-label="Elements"
+          >
+            <ng-container matColumnDef="foto">
+              <th mat-header-cell *matHeaderCellDef>Foto</th>
+              <td mat-cell *matCellDef="let row">
+                <img
+                  *ngIf="row.FotoProducto[0] !== undefined"
+                  mat-card-image
+                  class="fotoProducto"
+                  [src]="'data:image/jpeg;base64,' + row.FotoProducto"
+                  alt="Foto de + {{ row.Nombre }}"
+                />
+              </td>
+            </ng-container>
 
-                <ng-container matColumnDef="nombre">
-                  <th mat-header-cell *matHeaderCellDef >Producto</th>
-                  <td mat-cell *matCellDef="let row">{{ row.Nombre }}</td>
-                </ng-container>
-        
-                <ng-container matColumnDef="ventas">
-                  <th mat-header-cell *matHeaderCellDef >Ventas</th>
-                  <td mat-cell *matCellDef="let row">{{ row.Ventas }}</td>
-                </ng-container>
-        
-                <tr mat-header-row *matHeaderRowDef="productoColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: productoColumns"></tr>
-              </table>
-            </mat-card-content>
-          </div>
-        </div>
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef>Producto</th>
+              <td mat-cell *matCellDef="let row">{{ row.Nombre }}</td>
+            </ng-container>
 
-        <div class="column">
-          <div>
-            <h5>Vendedores mejor evaluados:</h5>
-            <mat-card-content>
-                <div id="mejoresVendedores"></div>
-            </mat-card-content>
-          </div>
+            <ng-container matColumnDef="ventas">
+              <th mat-header-cell *matHeaderCellDef>Ventas</th>
+              <td mat-cell *matCellDef="let row">{{ row.Ventas }}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="productoColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: productoColumns"></tr>
+          </table>
         </div>
-        
       </div>
 
-      <div class="d-flex">
-        <div class="col">
-            <div>
-              <h5>Vendedores con peor calificación:</h5>
-              <mat-card-content>
-                  <div id="peoresVendedores"></div>
-              </mat-card-content>
-            </div>
-          </div>
-
-        <div class="col"></div>
+      <div class="column">
+        <h5 align="center">Calificaciones recibidas:</h5>
+        <canvas #graficoCanvas class="chart"></canvas>
       </div>
+    </div>
+
+    <div class="container" >
+      <div class="column" style="background-color: rgb(141, 206, 125)">
+        <h5 align="center">Vendedores mejor evaluados:</h5>
+        <div class="w-100">
+          <table
+            mat-table
+            [dataSource]="MejoresVendedores"
+            class="full-width-table"
+            aria-label="Elements"
+          >
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef>Vendedor</th>
+              <td mat-cell *matCellDef="let row">
+                {{ row.Nombre + " " + row.Apellido }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="calificacion">
+              <th mat-header-cell *matHeaderCellDef>Calificación</th>
+              <td mat-cell *matCellDef="let row">{{ row.Calificacion }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="ventas">
+              <th mat-header-cell *matHeaderCellDef>Ventas totales</th>
+              <td mat-cell *matCellDef="let row">
+                {{ row.VentasRealizadas }}
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="vendedorColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: vendedorColumns"></tr>
+          </table>
+        </div>
+      </div>
+      <div class="column" style="background-color: rgb(236, 114, 114)">
+        <h5 align="center">Vendedores con peor Calificación:</h5>
+        <div class="w-100">
+          <table
+            mat-table
+            [dataSource]="PeoresVendedores"
+            class="full-width-table"
+            aria-label="Elements"
+          >
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef>Vendedor</th>
+              <td mat-cell *matCellDef="let row">
+                {{ row.Nombre + " " + row.Apellido }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="calificacion">
+              <th mat-header-cell *matHeaderCellDef>Calificación</th>
+              <td mat-cell *matCellDef="let row">{{ row.Calificacion }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="ventas">
+              <th mat-header-cell *matHeaderCellDef>Ventas totales</th>
+              <td mat-cell *matCellDef="let row">
+                {{ row.VentasRealizadas }}
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="vendedorColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: vendedorColumns"></tr>
+          </table>
+        </div>
+      </div>
+    </div>
   </mat-card-content>
 </mat-card>
