--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -18,6 +18,10 @@
         </c-nav-item>
 
         <c-nav-item>
+          <button *ngIf="isVendedor()" mat-button [routerLink]="['/vendedor/dashboard']" routerLinkActive="mat-raised-button">Dashboard</button>
+        </c-nav-item>
+
+        <c-nav-item>
           <button *ngIf="isAdmin()" mat-button [routerLink]="['/admin/producto/']" routerLinkActive="mat-raised-button">Productos</button>
         </c-nav-item>
         
