notificaciones en dirección y métodos de pago

--- a/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
+++ b/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
@@ -52,6 +52,16 @@
             >
               <mat-icon >info</mat-icon>
             </button>
+            <button
+            mat-mini-fab class="btnDetalle"
+            color="accent"
+            matTooltip="Evaluacion"
+            aria-label="Evaluacion"
+            color="primary"
+
+          >
+            <mat-icon >edit_attributes</mat-icon>
+          </button>
           </td>
         </ng-container>
 
