cambio de estado en pedidos
la función se encuentra en el btn pedidos en el navbar  para vendedores

--- a/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
+++ b/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
@@ -58,7 +58,7 @@
             matTooltip="Evaluacion"
             aria-label="Evaluacion"
             color="primary"
-
+            (click)="actualizarPedido(row.id, row.compra.id)"
           >
             <mat-icon >edit_attributes</mat-icon>
           </button>
