--- a/client/app/src/app/admin/dashboard/dashboard.component.html
+++ b/client/app/src/app/admin/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <mat-card class="shipping-card">
   <mat-card-content>
     <h3 align="center">Dashboard</h3>
-    <h4 align="center">Ventas realizadas el día de hoy: 💲🤑💲{{ VentasHoy }}💲🤑💲</h4>
+    <h4 align="center">Ventas realizadas el día de hoy: {{ VentasHoy }}</h4>
     <div class="container">
       <div class="column" style="background-color: rgb(131, 181, 228)">
         <div class="w-100">
