--- a/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
+++ b/client/app/src/app/compra/pedido-by-vendedor/pedido-by-vendedor.component.html
@@ -38,6 +38,12 @@
           <td mat-cell *matCellDef="let row">{{ row.Subtotal | currency : "₡" }}</td>
         </ng-container>
 
+         <!-- Columna Estado -->
+         <ng-container matColumnDef="estado">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
+          <td mat-cell *matCellDef="let row">{{ row.estadoCompra.Descripcion}}</td>
+        </ng-container>
+
         <!-- Columna acciones -->
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
